# struts_homedevices

./: pom.xml
client/: CMakeLists.txt  vcpkg.json
client/src/common/: univalue.cpp  univalue.h  univalue_escapes.h  univalue_get.cpp  univalue_read.cpp  univalue_utffilter.h  univalue_write.cpp
client/src/publisher/: main.cpp  publisher.cpp  publisher.h
client/src/subscriber/: main.cpp  subscriber.cpp  subscriber.h
src/main/java/com/github/balebomm/struts_homedevice/Actions/: DuLieuThietBiAction.java  NguoiDungAction.java  ThietBiAction.java
src/main/java/com/github/balebomm/struts_homedevice/Apps/: Listener.java
src/main/java/com/github/balebomm/struts_homedevice/DAO/: DbService.java  DuLieuThietBiDAO.java  NguoiDungDAO.java  ThietBiDAO.java
src/main/java/com/github/balebomm/struts_homedevice/Interceptor/: AuthenticatedInterceptor.java  RoleInterceptor.java
src/main/java/com/github/balebomm/struts_homedevice/Models/: DuLieuThietBi.java  NguoiDung.java  ThietBi.java
src/main/java/com/github/balebomm/struts_homedevice/actions/: ListCountryAction.java  ListRequestAction.java  RequestAction.java
src/main/java/com/github/balebomm/struts_homedevice/dao/: DaoFactory.java  IDaoService.java
src/main/java/com/github/balebomm/struts_homedevice/dao/file/: DaoRequestImpl.java
src/main/java/com/github/balebomm/struts_homedevice/models/: Request.java
src/main/resources/: struts.xml
src/main/webapp/WEB-INF/components/: device_card.jsp  header.jsp  library.jsp
src/main/webapp/WEB-INF/layouts/: login.jsp
src/main/webapp/WEB-INF/layouts/admin/: home.jsp
src/main/webapp/WEB-INF/layouts/admin/dulieuthietbi/: delete.jsp  list.jsp
src/main/webapp/WEB-INF/layouts/admin/thietbi/: create.jsp  delete.jsp  edit.jsp  list.jsp
src/main/webapp/WEB-INF/layouts/khach/: home.jsp
